Added admin module

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
                     <li><a href="#recruiters"><i class="fa-solid fa-suitcase"></i>Recruiters</a></li>
                     <li><a href="#students"><i class="fa-solid fa-user"></i>Students</a></li>
                     <li><a href="#contact"><i class="fa-solid fa-regular fa-address-book"></i>Contact Us</a></li>
-                    <li><a href="mid.html"><i class="fa-solid fa-file-pen"></i>Register</a></li>
+                    <li><a href="/mid"><i class="fa-solid fa-file-pen"></i>Register</a></li>
                 </ul>
             </nav>
             <img src="/images/logoPU.jpg" alt="University Logo">
