--- a/views/StudentLogin.ejs
+++ b/views/StudentLogin.ejs
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h2>Student</h2>
-        <form action="/StudentDashboard">
+        <form action="/StudentLogin" method="post">
             <label>Email Address</label>
             <input type="email" name="email" placeholder="Enter email">
             <label>Password</label>
