--- a/public/stylesheets/Login.css
+++ b/public/stylesheets/Login.css
@@ -6,7 +6,7 @@
 
 html, body {
     height: 100%;
-    background: url('Assets/bg2.jpg') center/cover fixed;
+    background: url('/images/bg2.jpg') center/cover fixed;
     display: flex;
     justify-content: center;
     align-items: center;
