--- a/views/StudentRegister.ejs
+++ b/views/StudentRegister.ejs
@@ -9,12 +9,12 @@
 <body>
     <div class="container">
         <h2>Student</h2>
-        <form action="/StudentLogin">
-            <input type="text" name="name" placeholder="Enter name">
-            <input type="number" name="regNo" placeholder="Enter registration number">
-            <input type="email" name="email" placeholder="Enter email">
-            <input type="password" name="password" placeholder="Enter Password">
-            <input type="password" name="confiirm-password" placeholder="Retype Password">
+        <form action="/StudentRegister" method="post">
+            <input for="name" type="text" name="name" placeholder="Enter name">
+            <input for="regNo" type="number" name="regNo" placeholder="Enter registration number">
+            <input for="email" type="email" name="email" placeholder="Enter email">
+            <input for="password" type="password" name="password" placeholder="Enter Password">
+            <input for="confirm-password" type="password" name="confiirm-password" placeholder="Retype Password">
             <button classs = "login" id = "login" type="submit">Register</button>
             <a href="/StudentLogin">Already a user? Sign In</a>
         </form>
