--- a/views/AdminRegister.ejs
+++ b/views/AdminRegister.ejs
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/stylesheets/Login.css">
+    <script src="https://kit.fontawesome.com/4800d7071c.js" crossorigin="anonymous"></script>
     <title>Admin Registeration</title>
 </head>
 <body>
     <div class="container">
-        <h2>Student</h2>
-        <form action="/AdminLogin">
+        <h2>Admin</h2>
+        <form action="/AdminRegister" method="post">
             <input type="text" name="name" placeholder="Enter name">
             <input type="number" name="regNo" placeholder="Enter registration number">
             <input type="email" name="email" placeholder="Enter email">
