--- a/views/mid.ejs
+++ b/views/mid.ejs
@@ -14,8 +14,8 @@
     <div class="dropdown">
         <select id="page-select">
             <option value="/StudentRegister">Student</option>
-            <option value="AdminRegister.html">Admin</option>
-            <option value="CompanyRegister.html">Company</option>
+            <option value="/AdminRegister">Admin</option>
+            <option value="/CompanyRegister">Company</option>
         </select>
     </div>
 
