--- a/views/AdminLogin.ejs
+++ b/views/AdminLogin.ejs
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h2>Student</h2>
-        <form action="/AdminDashBoard">
+        <h2>Admin</h2>
+        <form action="/AdminLogin" method="post">
             <label>Email Address</label>
             <input type="email" name="email" placeholder="Enter email">
             <label>Password</label>
