--- a/views/AdminDashBoard.ejs
+++ b/views/AdminDashBoard.ejs
@@ -10,34 +10,31 @@
 <body>
   <div class="sidebar">
     <div class="logo">
-      <img src="university_logo.png" alt="University Logo">
+      <img src="/images/logoPU.jpg" alt="University Logo" width="50" height="50">
     </div>
     <nav>
       <ul>
-        <li><a href="#">Job</a></li>
-        <li><a href="#">Dashboard</a></li>
-        <li><a href="#">Post</a></li>
+        <li><a href="#"><i class="fa-solid fa-suitcase"></i>Job</a></li>
+        <li><a href="#"><i class="fa-solid fa-gauge-simple-high"></i>Dashboard</a></li>
+        <li><a href="#"><i class="fa-solid fa-share-from-square"></i>Post</a></li>
       </ul>
     </nav>
   </div>
 
   <div class="navbar">
     <div class="search-box">
-      <input type="text" placeholder="Search...">
+     <input type="text" placeholder="Search...">
     </div>
+    <div class="right-item">
     <div class="notification">
-        <a href="#notificaion"><i class="fa-regular fa-bell"></i></a>
-      <!--<span>Notifications</span> -->
-      <!-- Add notification icon or content here -->
+        <a href="#notificaion"><i class="fa-regular fa-bell fa-2x"></i></a>
+    
     </div>
     <div class="profile">
         <img class="profile-img" src="university_logo.png"  width="35" height="35">
-        <span id="username"><% %></span></span>
-      <!-- Add profile picture or icon here -->
     </div>
   </div>
-
-  <!-- Your main content goes here -->
+  </div>
 
   <script src="script.js"></script>
 </body>
