Completed job Post module

--- a/public/stylesheets/Dashboard.css
+++ b/public/stylesheets/Dashboard.css
@@ -80,4 +80,7 @@ body {
 }
 .fa-solid{
   margin-right: 4px;
-}                                 
+} 
+.jobs{
+  color: white;
+}                                
