--- a/views/AdminDashBoard.ejs
+++ b/views/AdminDashBoard.ejs
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/stylesheets/Dashboard.css">
+  <link rel="stylesheet" href="/stylesheets/jobPostPopUp.css">
+
   <script src="https://kit.fontawesome.com/4800d7071c.js" crossorigin="anonymous"></script>
   <title>Your University</title>
 </head>
@@ -16,8 +18,25 @@
       <ul>
         <li><a href="#"><i class="fa-solid fa-suitcase"></i>Job</a></li>
         <li><a href="#"><i class="fa-solid fa-gauge-simple-high"></i>Dashboard</a></li>
-        <li><a href="#"><i class="fa-solid fa-share-from-square"></i>Post</a></li>
+        <li class="popup-trigger"><a href="#"><i class="fa-solid fa-share-from-square"></i>Post</a></li>
       </ul>
+      <div class="popup" id="popupForm">
+        <div class="popup-content">
+          <span class="close" id="closePopup"><i class="fa-solid fa-circle-xmark"></i></span><!--&times;-->
+          <form action="/AdminDashBoard" method="post">
+            <input type="text" id="company-name" name="companyName" required placeholder="Comapany Name">
+            <input type="text" id="location" name="location" required placeholder="Location">
+            <input type="text" id="job-role" name="jobRole" required placeholder="Job Role">
+            <input type="text" id="salary" name="salary" required placeholder="Salary">
+            <input type="text" id="eligiblity" name="eligiblity" required placeholder="Eligiblity">
+            <input type="text" id="job-description" name="jobDesc" required placeholder="Job Description">
+            <input type="text" id="apply-link" name="applyLink" required placeholder="Apply Link">
+            <input type="date" id="date" name="lastDate" required>
+            <button type="submit">Post Job</button>
+          </form>
+        </div>
+      </div>
+    
     </nav>
   </div>
 
@@ -36,6 +55,7 @@
   </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="/javascripts/jobPostPopUp.js"></script>
+
 </body>
 </html>
