--- a/views/AdminLogin.ejs
+++ b/views/AdminLogin.ejs
@@ -9,13 +9,13 @@
 <body>
     <div class="container">
         <h2>Admin</h2>
-        <form action="/AdminLogin" method="post">
+        <form action="/admin/AdminLogin" method="post">
             <label>Email Address</label>
             <input type="email" name="email" placeholder="Enter email">
             <label>Password</label>
             <input type="password" name="password" placeholder="Enter Password">
             <button classs = "login" id = "login" type="submit">Login</button>
-            <a href="/AdminRegister">Sign Up</a>
+            <a href="/admin/AdminRegister">Sign Up</a>
         </form>
     </div>
 </body>
