--- a/views/AdminRegister.ejs
+++ b/views/AdminRegister.ejs
@@ -10,14 +10,14 @@
 <body>
     <div class="container">
         <h2>Admin</h2>
-        <form action="/AdminRegister" method="post">
+        <form action="/admin/AdminRegister" method="post">
             <input type="text" name="name" placeholder="Enter name">
             <input type="number" name="regNo" placeholder="Enter registration number">
             <input type="email" name="email" placeholder="Enter email">
             <input type="password" name="password" placeholder="Enter Password">
             <input type="password" name="confiirm-password" placeholder="Retype Password">
             <button classs = "login" id = "login" type="submit">Register</button>
-            <a href="/AdminLogin">Already a user? Sign In</a>
+            <a href="/admin/AdminLogin">Already a user? Sign In</a>
         </form>
     </div>
 </body>
