--- a/views/StudentLogin.ejs
+++ b/views/StudentLogin.ejs
@@ -9,13 +9,13 @@
 <body>
     <div class="container">
         <h2>Student</h2>
-        <form action="/StudentLogin" method="post">
+        <form action="/student/StudentLogin" method="post">
             <label>Email Address</label>
             <input type="email" name="email" placeholder="Enter email">
             <label>Password</label>
             <input type="password" name="password" placeholder="Enter Password">
             <button classs = "login" id = "login" type="submit">Login</button>
-            <a href="/StudentRegister">Sign Up</a>
+            <a href="/student/StudentRegister">Sign Up</a>
         </form>
     </div>
 </body>
