--- a/views/mid.ejs
+++ b/views/mid.ejs
@@ -13,8 +13,8 @@
 
     <div class="dropdown">
         <select id="page-select">
-            <option value="/StudentRegister">Student</option>
-            <option value="/AdminRegister">Admin</option>
+            <option value="/student/StudentRegister">Student</option>
+            <option value="/admin/AdminRegister">Admin</option>
             <option value="/CompanyRegister">Company</option>
         </select>
     </div>
