--- a/views/StudentDashboard.ejs
+++ b/views/StudentDashboard.ejs
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/stylesheets/Dashboard.css">
+  <link rel="stylesheet" href="/stylesheets/jobPostPopUp.css">
+
+  <script src="https://kit.fontawesome.com/4800d7071c.js" crossorigin="anonymous"></script>
+  <title>Student Dashboard</title>
 </head>
+
 <body>
-    <h1>Student Dashboard</h1>
+  <div class="sidebar">
+    <div class="logo">
+      <img src="/images/logoPU.jpg" alt="University Logo" width="50" height="50">
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#"><i class="fa-solid fa-gauge-simple-high"></i>Dashboard</a></li>
+        <li><a href="#"><i class="fa-solid fa-suitcase"></i>Job</a></li>
+        <li><a href="#"><i class="fa-solid fa-user"></i>Profile</a></li>
+        <li><a href="#"><i class="fa-solid fa-regular fa-file"></i>Resume Building</a></li>
+      </ul>
+     <!-- <div class="popup" id="popupForm">
+        <div class="popup-content">
+          <span class="close" id="closePopup"><i class="fa-solid fa-circle-xmark"></i></span>
+          &times;
+          <form action="/admin/AdminDashBoard" method="post">
+            <input type="text" id="company-name" name="companyName" required placeholder="Comapany Name">
+            <input type="text" id="location" name="location" required placeholder="Location">
+            <input type="text" id="job-role" name="jobRole" required placeholder="Job Role">
+            <input type="text" id="salary" name="salary" required placeholder="Salary">
+            <input type="text" id="eligiblity" name="eligiblity" required placeholder="Eligiblity">
+            <input type="text" id="job-description" name="jobDesc" required placeholder="Job Description">
+            <input type="text" id="apply-link" name="applyLink" required placeholder="Apply Link">
+            <input type="date" id="date" name="lastDate" required>
+            <button type="submit">Post Job</button>
+          </form>
+        </div>
+      </div> -->
+    </nav>
+  </div>
+  <div class="navbar">
+    <div class="search-box">
+      <input type="text" placeholder="Search...">
+    </div>
+    <div class="right-item">
+      <div class="notification">
+        <a href="#notificaion"><i class="fa-regular fa-bell fa-2x"></i></a>
+
+      </div>
+      <div class="profile">
+        <img class="profile-img" src="university_logo.png" width="35" height="35">
+      </div>
+    </div>
+  </div>
+ 
+
+  <script src="/javascripts/jobPostPopUp.js"></script>
+
 </body>
+
 </html>
