--- a/views/StudentDashboard.ejs
+++ b/views/StudentDashboard.ejs
@@ -20,7 +20,7 @@
       <ul>
         <li><a href="#"><i class="fa-solid fa-gauge-simple-high"></i>Dashboard</a></li>
         <li><a href="#"><i class="fa-solid fa-suitcase"></i>Job</a></li>
-        <li><a href="#"><i class="fa-solid fa-user"></i>Profile</a></li>
+        <li><a href="/student/StudentProfile"><i class="fa-solid fa-user"></i>Profile</a></li>
         <li><a href="#"><i class="fa-solid fa-regular fa-file"></i>Resume Building</a></li>
       </ul>
      <!-- <div class="popup" id="popupForm">
