--- a/views/StudentProfile.ejs
+++ b/views/StudentProfile.ejs
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/stylesheets/StudentProfile.css">
+  <title>Editable Input Field</title>
 </head>
 <body>
-    <h1>Student Profile</h1>
+<div class="upperDiv">
+  <img src="" alt="Display picture">
+  <h3>Username</h3>
+</div>
+<div class="container">
+  <input type="text" id="editableInput" disabled>
+  <button id="editBtn" onclick="enableEdit()">Edit</button>
+  <button id="saveBtn" onclick="saveChanges()">Save</button>
+  <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+</div>
+
+<script src="/javascripts/StudentProfile.js"></script>
+
 </body>
 </html>
