--- a/views/StudentProfile.ejs
+++ b/views/StudentProfile.ejs
@@ -1,24 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/stylesheets/StudentProfile.css">
   <title>Editable Input Field</title>
 </head>
-<body>
-<div class="upperDiv">
-  <img src="" alt="Display picture">
-  <h3>Username</h3>
-</div>
-<div class="container">
-  <input type="text" id="editableInput" disabled>
-  <button id="editBtn" onclick="enableEdit()">Edit</button>
-  <button id="saveBtn" onclick="saveChanges()">Save</button>
-  <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
-</div>
 
-<script src="/javascripts/StudentProfile.js"></script>
+<body>
+  <div class="upperDiv">
+    <img src="" alt="Display picture">
+    <h3>Username</h3>
+  </div>
+  <div class="parentContainer">
+  <div class="container">
+    <label for="name">Name</label>
+    <input type="text" id="editableInput" disabled>
+    <button id="editBtn" onclick="enableEdit()">Edit</button>
+    <button id="saveBtn" onclick="saveChanges()">Save</button>
+    <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+  </div>
+  <div class="container">
+    <label for="gender">Gender</label>
+    <input type="text" id="inputGender" disabled>
+    <button id="editGenderBtn" onclick="enableGenderEdit()">Edit</button>
+    <button id="saveGenderBtn" onclick="saveGenderChanges()">Save</button>
+    <button id="cancelGenderBtn" onclick="cancelGenderEdit()">Cancel</button>
+  </div>
+  <div class="container">
+    <label for="location">Location</label>
+    <input type="text" id="location" disabled>
+    <button id="editLocation" onclick="enableLocationEdit()">Edit</button>
+    <button id="savelocation" onclick="saveLocationChanges()">Save</button>
+    <button id="cancellocation" onclick="cancelLocationEdit()">Cancel</button>
+  </div>
+</div>
+ <!-- <div class="upperDiv">
+    <img src="" alt="Display picture">
+    <h3>Username</h3>
+  </div>
+  <div class="container">
+    <div class="inputContainer">
+      <label>Name</label>
+      <input type="text" id="editableInput" disabled>
+      <button  id="editBtn" onclick="enableEdit()">Edit</button>
+      <button  id="saveBtn" onclick="saveChanges()">Save</button>
+      <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+    </div>
+   <div class="inputContainer">
+      <input type="text" id="editableInput" disabled>
+      <button id="editBtn" onclick="enableEdit()">Edit</button>
+      <button id="saveBtn" onclick="saveChanges()">Save</button>
+      <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+    </div>
+    <div class="inputContainer">
+      <input type="text" id="editableInput" disabled>
+      <button id="editBtn" onclick="enableEdit()">Edit</button>
+      <button id="saveBtn" onclick="saveChanges()">Save</button>
+      <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+    </div>
+    <div class="inputContainer">
+      <input type="text" id="editableInput" disabled>
+      <button id="editBtn" onclick="enableEdit()">Edit</button>
+      <button id="saveBtn" onclick="saveChanges()">Save</button>
+      <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+    </div>
+    <div class="inputContainer">
+      <input type="text" id="editableInput" disabled>
+      <button id="editBtn" onclick="enableEdit()">Edit</button>
+      <button id="saveBtn" onclick="saveChanges()">Save</button>
+      <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+    </div>
+    <div class="inputContainer">
+      <input type="text" id="editableInput" disabled>
+      <button id="editBtn" onclick="enableEdit()">Edit</button>
+      <button id="saveBtn" onclick="saveChanges()">Save</button>
+      <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+    </div>
+    <div class="inputContainer">
+      <input type="text" id="editableInput" disabled>
+      <button id="editBtn" onclick="enableEdit()">Edit</button>
+      <button id="saveBtn" onclick="saveChanges()">Save</button>
+      <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+    </div>
+    <div class="inputContainer">
+      <input type="text" id="editableInput" disabled>
+      <button id="editBtn" onclick="enableEdit()">Edit</button>
+      <button id="saveBtn" onclick="saveChanges()">Save</button>
+      <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+    </div>
+    <div class="inputContainer">
+      <input type="text" id="editableInput" disabled>
+      <button id="editBtn" onclick="enableEdit()">Edit</button>
+      <button id="saveBtn" onclick="saveChanges()">Save</button>
+      <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+    </div>
+    <div class="inputContainer">
+      <input type="text" id="editableInput" disabled>
+      <button id="editBtn" onclick="enableEdit()">Edit</button>
+      <button id="saveBtn" onclick="saveChanges()">Save</button>
+      <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+    </div>
+    <div class="inputContainer">
+      <input type="text" id="editableInput" disabled>
+      <button id="editBtn" onclick="enableEdit()">Edit</button>
+      <button id="saveBtn" onclick="saveChanges()">Save</button>
+      <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+    </div>
+  </div> --> 
+  <script src="/javascripts/StudentProfile.js"></script>
 
 </body>
+
 </html>
