Updated sudent profile

--- a/views/StudentProfile.ejs
+++ b/views/StudentProfile.ejs
@@ -17,23 +17,103 @@
   <div class="container">
     <label for="name">Name</label>
     <input type="text" id="editableInput" disabled>
-    <button id="editBtn" onclick="enableEdit()">Edit</button>
+    <button class="editBtn"  id="editBtn" onclick="enableEdit()">Edit</button>
     <button id="saveBtn" onclick="saveChanges()">Save</button>
     <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
   </div>
+  <hr>
   <div class="container">
     <label for="gender">Gender</label>
     <input type="text" id="inputGender" disabled>
-    <button id="editGenderBtn" onclick="enableGenderEdit()">Edit</button>
+    <button class="editBtn" id="editGenderBtn" onclick="enableGenderEdit()">Edit</button>
     <button id="saveGenderBtn" onclick="saveGenderChanges()">Save</button>
     <button id="cancelGenderBtn" onclick="cancelGenderEdit()">Cancel</button>
   </div>
   <div class="container">
     <label for="location">Location</label>
     <input type="text" id="location" disabled>
-    <button id="editLocation" onclick="enableLocationEdit()">Edit</button>
+    <button class="editBtn" id="editLocation" onclick="enableLocationEdit()">Edit</button>
     <button id="savelocation" onclick="saveLocationChanges()">Save</button>
     <button id="cancellocation" onclick="cancelLocationEdit()">Cancel</button>
+  </div>
+  <div class="container">
+    <label for="birthday">Birthday</label>
+    <input type="text" id="editableInput" disabled>
+    <button class="editBtn"  id="editBtn" onclick="enableEdit()">Edit</button>
+    <button id="saveBtn" onclick="saveChanges()">Save</button>
+    <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+  </div>
+  <div class="container">
+    <label for="summary">Summary</label>
+    <input type="text" id="editableInput" disabled>
+    <button class="editBtn"  id="editBtn" onclick="enableEdit()">Edit</button>
+    <button id="saveBtn" onclick="saveChanges()">Save</button>
+    <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+  </div>
+  <div class="container">
+    <label for="website">Website</label>
+    <input type="text" id="editableInput" disabled>
+    <button class="editBtn"  id="editBtn" onclick="enableEdit()">Edit</button>
+    <button id="saveBtn" onclick="saveChanges()">Save</button>
+    <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+  </div>
+  <div class="container">
+    <label for="github">Github</label>
+    <input type="text" id="editableInput" disabled>
+    <button class="editBtn"  id="editBtn" onclick="enableEdit()">Edit</button>
+    <button id="saveBtn" onclick="saveChanges()">Save</button>
+    <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+  </div>
+  <div class="container">
+    <label for="linkedin">LinedIn</label>
+    <input type="text" id="editableInput" disabled>
+    <button class="editBtn"  id="editBtn" onclick="enableEdit()">Edit</button>
+    <button id="saveBtn" onclick="saveChanges()">Save</button>
+    <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+  </div>
+  <div class="container">
+    <label for="twitter">Twitter</label>
+    <input type="text" id="editableInput" disabled>
+    <button class="editBtn"  id="editBtn" onclick="enableEdit()">Edit</button>
+    <button id="saveBtn" onclick="saveChanges()">Save</button>
+    <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+  </div>
+  <h3>Expierences</h3>
+  <div class="container">
+    <label for="work">Work</label>
+    <input type="text" id="editableInput" disabled>
+    <button class="editBtn"  id="editBtn" onclick="enableEdit()">Edit</button>
+    <button id="saveBtn" onclick="saveChanges()">Save</button>
+    <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+  </div>
+  <div class="container">
+    <label for="education">Education</label>
+    <input type="text" id="editableInput" disabled>
+    <button class="editBtn"  id="editBtn" onclick="enableEdit()">Edit</button>
+    <button id="saveBtn" onclick="saveChanges()">Save</button>
+    <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+  </div>
+  <div class="container">
+    <label for="skills">Skills</label>
+    <input type="text" id="editableInput" disabled>
+    <button class="editBtn"  id="editBtn" onclick="enableEdit()">Edit</button>
+    <button id="saveBtn" onclick="saveChanges()">Save</button>
+    <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+  </div>
+  <h3>Academic Details</h3>
+  <div class="container">
+    <label for="course">Course</label>
+    <input type="text" id="editableInput" disabled>
+    <button class="editBtn"  id="editBtn" onclick="enableEdit()">Edit</button>
+    <button id="saveBtn" onclick="saveChanges()">Save</button>
+    <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+  </div>
+  <div class="container">
+    <label for="1stSemCGPA">1st Semester CGPA</label>
+    <input type="text" id="editableInput" disabled>
+    <button class="editBtn"  id="editBtn" onclick="enableEdit()">Edit</button>
+    <button id="saveBtn" onclick="saveChanges()">Save</button>
+    <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
   </div>
 </div>
  <!-- <div class="upperDiv">
@@ -64,7 +144,17 @@
       <input type="text" id="editableInput" disabled>
       <button id="editBtn" onclick="enableEdit()">Edit</button>
       <button id="saveBtn" onclick="saveChanges()">Save</button>
-      <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+      <button id="function enableGenderEdit() {
+  toggleEditElements("inputGender", "editGenderBtn", "saveGenderBtn", "cancelGenderBtn");
+}
+
+function saveGenderChanges() {
+  toggleEditElements("inputGender", "editGenderBtn", "saveGenderBtn", "cancelGenderBtn");
+}
+
+function cancelGenderEdit() {
+  toggleEditElements("inputGender", "editGenderBtn", "saveGenderBtn", "cancelGenderBtn");
+}cancelBtn" onclick="cancelEdit()">Cancel</button>
     </div>
     <div class="inputContainer">
       <input type="text" id="editableInput" disabled>
