--- a/public/stylesheets/StudentProfile.css
+++ b/public/stylesheets/StudentProfile.css
@@ -18,15 +18,41 @@ body {
   input {
     padding: 8px;
     margin-right: 5px;
+    border-bottom: 1px solid black;
+    /*border: none;*/
+    outline: none;
   }
-  
+  .editBtn{
+    background-color: rgb(26, 25, 25);
+    color: white;
+    border-radius: 5px;
+    padding: 10px 20px 10px 20px;
+    margin: 10px;
+    border: none;
+    float: right;
+  }
   button {
     padding: 8px;
     cursor: pointer;
   }
   
-  #saveBtn, #cancelBtn {
+  #saveBtn,#saveGenderBtn, #savelocation{
     display: none;
+    background-color: rgb(133, 178, 236);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 18px 10px 18px;
+    margin: 10px;
+  }
+  #cancelBtn,  #cancelGenderBtn, #cancellocation{
+    display: none;
+    background-color: rgb(243, 111, 111);
+    border: none;
+    border-radius: 5px;
+    padding: 10px 18px 10px 18px;
+    margin: 10px;
+    color: white;
   }
 .upperDiv{
   width: 100%;
